# oeuai

tank-vision/: .gitignore  requirements.txt  setup.py  tank_vision_hud.bat  test_image.bat
tank-vision/config/: dataset.yaml  dataset_v2.yaml  default.yaml
tank-vision/config/camera/: default_camera.yaml  object_dimensions.yaml
tank-vision/config/tracker/: botsort.yaml
tank-vision/cpp/: BUILD.md  CMakeLists.txt
tank-vision/cpp/include/: depth.h  detector.h  hud.h  threat.h  tracker.h
tank-vision/cpp/src/: depth.cpp  detector.cpp  hud.cpp  main.cpp  threat.cpp  tracker.cpp
tank-vision/data/: augment.py  class_mapping.py  convert.py  download.py  merge.py  split.py  validate_labels.py
tank-vision/inference/: batch_processor.py  pipeline.py  result.py  stream.py
tank-vision/models/: detector.py  foe_classifier.py  human_classifier.py  tank_classifier.py  turret_estimator.py  weapon_classifier.py
tank-vision/modules/: altitude.py  detection.py  display.py  distance.py  speed.py  threat.py  time_to_reach.py  tracking.py
tank-vision/scripts/: benchmark.py  build_v2_dataset.py  build_v3_dataset.py  calibrate_camera.py  download_and_prepare.py  download_datasets.py  evaluate.py  export_model.py  export_models.py  prepare_dataset.py  quick_test.py  tank_vision_hud.py  tank_vision_pro.py  train_detector.py  train_foe_cls.py  train_human_cls.py  train_tank_cls.py  train_turret_est.py  train_v3.py  train_weapon_cls.py
tank-vision/tests/: conftest.py  test_altitude.py  test_detection.py  test_distance.py  test_pipeline.py  test_speed.py  test_threat.py  test_time_to_reach.py  test_tracking.py
tank-vision/utils/: bbox_utils.py  color_palette.py  config_loader.py  device.py  fps_counter.py  geometry.py  logger.py  video_io.py
